<resources>
    <string name="app_name">Offline Voting App</string>
    <string name="title_btn_logon">Click here to vote for your favorite candidate</string>
    <string name="title_btn_login">Login</string>
    <string name="title_tv_admin">Admin</string>
    <string name="hint_tie_username">Username</string>
    <string name="hint_tie_password">Password</string>
    <string name="title_voter_login">Voter Login</string>
    <string name="title_admin_login">Admin Login</string>
    <string name="title_btn_vote">Vote</string>
    <string name="title_admin_panel">Admin Panel</string>
    <string name="title_ap_btn_upd_view_candidates">View or Update candidates</string>
    <string name="title_ap_btn_set_upd_voter_count">Set or Update voter count</string>
    <string name="title_ap_btn_view_election_results">View election results</string>
    <string name="title_ap_btn_reset_elections">Reset elections</string>
    <string name="hint_empty_candidates_list">No candidates currently.</string>
    <string name="title_voter_count">Total Voters</string>
    <string name="title_total_candidates">Total Candidates</string>
    <string name="title_activity_voting">Vote</string>
    <string name="title_ap_btn_change_password">Change Admin Password</string>
    <string name="hint_tie_change_password">Type new password</string>
    <string name="title_btn_save">Save</string>
    <string name="title_btn_add">Add</string>
    <string name="title_elections_result">Elections Result</string>
    <string name="hint_empty_elections_result">Elections have yet to be held.</string>
    <string name="hint_empty_candidates_voting_list">There are no candidates currently.</string>
</resources>
