<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appsbydmk.simplevotingsystem.activities.AdminPanelActivity">

    <Button
        android:id="@+id/btn_ap_upd_view_candidates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:text="@string/title_ap_btn_upd_view_candidates"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ap_set_upd_voter_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:text="@string/title_ap_btn_set_upd_voter_count"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ap_view_election_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:text="@string/title_ap_btn_view_election_results"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ap_reset_elections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:text="@string/title_ap_btn_reset_elections"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ap_change_admin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:text="@string/title_ap_btn_change_password"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark" />

</LinearLayout>
