<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appsbydmk.simplevotingsystem.activities.MainActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_margin_all_views"
            android:layout_marginEnd="@dimen/vertical_margin_all_views"
            android:layout_marginStart="@dimen/vertical_margin_all_views"
            android:layout_marginTop="@dimen/horizontal_margin_all_views">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/horizontal_margin_all_views"
                android:layout_marginEnd="@dimen/vertical_margin_all_views"
                android:layout_marginStart="@dimen/vertical_margin_all_views"
                android:layout_marginTop="@dimen/horizontal_margin_all_views"
                android:hint="@string/hint_tie_username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_margin_all_views"
            android:layout_marginEnd="@dimen/vertical_margin_all_views"
            android:layout_marginStart="@dimen/vertical_margin_all_views"
            android:layout_marginTop="@dimen/horizontal_margin_all_views">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/horizontal_margin_all_views"
                android:layout_marginEnd="@dimen/vertical_margin_all_views"
                android:layout_marginStart="@dimen/vertical_margin_all_views"
                android:layout_marginTop="@dimen/horizontal_margin_all_views"
                android:hint="@string/hint_tie_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_margin_all_views"
            android:layout_marginEnd="@dimen/vertical_margin_all_views"
            android:layout_marginStart="@dimen/vertical_margin_all_views"
            android:layout_marginTop="@dimen/horizontal_margin_all_views"
            android:text="@string/title_btn_login"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:clickable="true"
        android:text="@string/title_tv_admin"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent" />


</RelativeLayout>
