<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appsbydmk.simplevotingsystem.activities.AdminActivity">

    <TextView
        android:id="@+id/tv_title_admin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/horizontal_margin_all_views"
        android:layout_marginEnd="@dimen/vertical_margin_all_views"
        android:layout_marginStart="@dimen/vertical_margin_all_views"
        android:layout_marginTop="@dimen/horizontal_margin_all_views"
        android:text="@string/title_admin_login"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_heading_login_screen"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/admin_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_admin_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_margin_all_views"
            android:layout_marginEnd="@dimen/vertical_margin_all_views"
            android:layout_marginStart="@dimen/vertical_margin_all_views"
            android:layout_marginTop="@dimen/horizontal_margin_all_views">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_admin_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/horizontal_margin_all_views"
                android:layout_marginEnd="@dimen/vertical_margin_all_views"
                android:layout_marginStart="@dimen/vertical_margin_all_views"
                android:layout_marginTop="@dimen/horizontal_margin_all_views"
                android:hint="@string/hint_tie_username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_admin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_margin_all_views"
            android:layout_marginEnd="@dimen/vertical_margin_all_views"
            android:layout_marginStart="@dimen/vertical_margin_all_views"
            android:layout_marginTop="@dimen/horizontal_margin_all_views">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_admin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/horizontal_margin_all_views"
                android:layout_marginEnd="@dimen/vertical_margin_all_views"
                android:layout_marginStart="@dimen/vertical_margin_all_views"
                android:layout_marginTop="@dimen/horizontal_margin_all_views"
                android:hint="@string/hint_tie_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_admin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_margin_all_views"
            android:layout_marginEnd="@dimen/vertical_margin_all_views"
            android:layout_marginStart="@dimen/vertical_margin_all_views"
            android:layout_marginTop="@dimen/horizontal_margin_all_views"
            android:text="@string/title_btn_login"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>
